# BobBot

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  lint_and_deploy.yml  main.yml
cogs/CompanyCog/: company_cog.py  employees.json
cogs/EventCog/: event_cog.py
cogs/HeardleCog/: heardle_cog.py
utils/: updater.py
