[project]
name = "bobbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dateutils>=0.6.12",
    "discord>=2.3.2",
    "flask>=3.1.0",
    "gitpython>=3.1.44",
    "pynacl>=1.5.0",
    "ruff>=0.8.5",
    "spotipy>=2.25.1",
    "yt-dlp>=2025.3.21",
]
